// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextEditor overview snapshot 1`] = `
<DocumentFragment>
  <input
    aria-label="enter some text"
    class="css-iyqgnx"
    id="prop"
    name="prop"
    value="Hello"
  />
</DocumentFragment>
`;

exports[`TextEditor placeholder snapshot 1`] = `
<DocumentFragment>
  <input
    aria-label="enter a value for prop"
    class="css-iyqgnx"
    id="prop"
    name="prop"
    placeholder="Enter some text"
    value=""
  />
</DocumentFragment>
`;

exports[`TextEditor textArea snapshot 1`] = `
<DocumentFragment>
  <textarea
    aria-label="enter a value for prop"
    class="css-iyqgnx"
    id="prop"
    name="prop"
    placeholder="Enter multiple lines of text"
    rows="4"
  />
</DocumentFragment>
`;
